# Lite3_MotionSDK

./: CMakeLists.txt  README.md  main.c
include/: dr_timer.hpp  motionexample.h  receiver.hpp  robot_types.h  sender.h  sender.hpp  sender_.h
include/common/: command.h  udpserver.hpp
include/wrapped/: command.h  dr_timer.h  receiver.h  sender.h  udp_server.h  udp_socket.h
src/: motionexample.cpp
src/wrapped/: command.cpp  dr_timer.cpp  receiver.cpp  sender.cpp  udp_server.cpp  udp_socket.cpp  udpserver.cpp  udpsocket.cpp
